--- a/WebCompleta/WebCompleta.csproj
+++ b/WebCompleta/WebCompleta.csproj
@@ -50,6 +50,10 @@
     <None Include="wwwroot\images\fondo2.jfif" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Practica3_PlaylistAPI\Practica3_PlaylistAPI\Practica3_PlaylistAPI.csproj" />
+  </ItemGroup>
+
     <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
